# polyhedral-order-book

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1
docs/: PLAN.md
include/pob/clob/: order_book.hpp  types.hpp
include/pob/polyhedral/: matching.hpp  polyhedral_book.hpp  predicates.hpp  pricing.hpp  types.hpp
src/: CMakeLists.txt
src/clob/: CMakeLists.txt  order_book.cpp
src/polyhedral/: CMakeLists.txt  matching.cpp  polyhedral_book.cpp  pricing.cpp
tests/: CMakeLists.txt
tests/clob/: CMakeLists.txt  order_book_test.cpp  smoke_test.cpp
tests/polyhedral/: CMakeLists.txt  highs_smoke_test.cpp  matching_test.cpp  polyhedral_book_test.cpp  predicates_test.cpp  pricing_test.cpp
